# advent

./: .gitignore  .leaderboards  LICENSE  README.md  advent.ts  badges.clj  bb.edn  input  leaderboard.friends.txt  leaderboard.sal.txt  leaderboard.txt  library.py  pyproject.toml  template.py  token.txt  tokenb.txt  utils.clj  utils.py
2015/clojure/: deps.edn  p01.clj  p02.clj  p06.clj  p07.clj  p08.clj  p09.clj  p10.clj  p11.clj  p12.clj  p13.clj  p14.clj  p15.clj  p16.clj  p17.clj  p18.clj  p19.clj  p20.clj  p21.clj  p22.clj  p23.clj  p24.clj  p25.clj  user.clj
2015/py/: p01.py  p02.py  p03.py  p04.py  p05.py  p07.py  template.py
2016/: p01.py  p02.py
2016/clojure/: .gitignore  TODO  deps.edn  p05.clj  p06.clj  p07.clj  p08.clj  p09.clj  p10.clj  p11.clj  p11.old.clj  p12.clj  p13.clj  p14.clj  p15.clj  p16.clj  p17.clj  p18.clj  p19.clj  p20.clj  p21.clj  p22.clj  p23.clj  p24.clj  p25.clj  user.clj  util.clj
2016/nim/: p05.nim
2016/py/: p01.hy  p01.py  p02.py  p03.py  p04.py  p05.py  template.py
2017/clojure/: .nrepl-port  README.md  (+28 more)
input/: 13.txt  15.txt  20.txt  24.txt
nim/: Makefile  p001.nim  p01.nim  p02.nim  p03.nim  p04.nim  p05.nim
py/: 001.py  002.py  003.py  j002.py  p001.py  p002.py  p004.py  p005.py  p006.py  p007.py  p01.py  p02.py  p03.py  p07.py  p09.py  p11.py  p12.py  p13.py  utils.py
scripts/: .leaderboards.json  badges.clj  clean  fetch.clj  template.py  unzip  utils.clj  utils.py  zip
synacor-challenge/: .gitignore  DEVLOG.md  README.md  arch-spec  arch.py  challenge.txt  coins.py  diss.py  playthrough.out  runner.sh  tape.in
(+352 files in other folders)
